--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/user-event": "^7.2.1",
     "emoji-mart": "^3.0.1",
     "firebase": "^7.23.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
